@@ -29,7 +29,7 @@ class IaSectionValidatorRoundTripTest {
 			errors = exception.getDetails();
 		}
 
-		Integer error = errors.getErrors().get(0).getDetails().get(0).getErrorCode();
+		Integer error = errors.getErrors().getFirst().getDetails().getFirst().getErrorCode();
 
 		assertThat(ProblemCode.getByCode(error))
 				.isEqualTo(ProblemCode.IA_SECTION_WRONG_CHILD);
@@ -47,7 +47,7 @@ class IaSectionValidatorRoundTripTest {
 			errors = exception.getDetails();
 		}
 
-		Integer error = errors.getErrors().get(0).getDetails().get(0).getErrorCode();
+		Integer error = errors.getErrors().getFirst().getDetails().getFirst().getErrorCode();
 
 		assertThat(ProblemCode.getByCode(error))
 				.isEqualTo(ProblemCode.IA_SECTION_MISSING_IA_MEASURE);
@@ -66,7 +66,7 @@ class IaSectionValidatorRoundTripTest {
 			errors = exception.getDetails();
 		}
 
-		Integer error = errors.getErrors().get(0).getDetails().get(0).getErrorCode();
+		Integer error = errors.getErrors().getFirst().getDetails().getFirst().getErrorCode();
 
 		assertThat(ProblemCode.getByCode(error))
 				.isEqualTo(ProblemCode.IA_SECTION_MISSING_REPORTING_PARAM);
